--- a/xprof/xprof.rb.in
+++ b/xprof/xprof.rb.in
@@ -614,7 +614,7 @@ def lm_babeltrace(backends)
     LOGGER.debug(cmd)
     pid_bt = spawn(cmd)
 
-    cmd = "python dirwatch.py --log-level=CRITICAL #{lttng_session_uuid} #{LTTNG_DIRWATCH_SIZE}"
+    cmd = "dirwatch.py --log-level=CRITICAL #{lttng_session_uuid} #{LTTNG_DIRWATCH_SIZE}"
     LOGGER.debug(cmd)
     pid_laurence = spawn(cmd)
 
