--- a/utils/babeltrace_thapi.in
+++ b/utils/babeltrace_thapi.in
@@ -287,7 +287,7 @@ def bt_graphs(inputs)
     g_comps = [if $options[:live]
                  'source.ctf.lttng_live'
                elsif $options[:archive]
-                  'source.ctf.lttng-archive'
+                  'source.ctf.lttng_archive'
                else
                  'source.ctf.fs'
                end]
