--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -190,7 +190,7 @@ jobs:
         run: tar -xvf thapi.tar
       - run: sudo apt update; sudo apt install -y $APT_PACKAGE bats coreutils libpocl2 clinfo
       - run: sudo gem install babeltrace2 opencl_ruby_ffi
-      - name: Load Babeltrace2
+      - name: Load Efficios Dependencies
         run: |
           echo "$HOME/efficios_dep/bin" >> $GITHUB_PATH
           echo "LD_LIBRARY_PATH=$HOME/efficios_dep/lib:$LD_LIBRARY_PATH" >> $GITHUB_ENV
@@ -214,7 +214,7 @@ jobs:
           key: ${{ runner.os }}-build-${{ env.cache-name }}
       - run: sudo apt update; sudo apt install -y $APT_PACKAGE
       - run: sudo gem install cast-to-yaml nokogiri babeltrace2 opencl_ruby_ffi metababel
-      - name: Load Babeltrace2
+      - name: Load Efficios Dependencies
         run: |
           echo "$HOME/efficios_dep/bin" >> $GITHUB_PATH
           echo "PKG_CONFIG_PATH=$HOME/efficios_dep/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
@@ -252,7 +252,7 @@ jobs:
           key: ${{ runner.os }}-build-${{ env.cache-name }}
       - run: sudo apt update; sudo apt install -y $APT_PACKAGE
       - run: sudo gem install cast-to-yaml nokogiri babeltrace2 opencl_ruby_ffi metababel
-      - name: Load Babeltrace2
+      - name: Load Efficios Dependencies
         run: |
           echo "$HOME/efficios_dep/bin" >> $GITHUB_PATH
           echo "PKG_CONFIG_PATH=$HOME/efficios_dep/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
@@ -284,7 +284,7 @@ jobs:
           key: ${{ runner.os }}-build-${{ env.cache-name }}
       - run: sudo apt update; sudo apt install -y $APT_PACKAGE
       - run: sudo gem install cast-to-yaml nokogiri babeltrace2 opencl_ruby_ffi metababel
-      - name: Load Babeltrace2
+      - name: Load Efficios Dependencie
         run: |
           echo "$HOME/efficios_dep/bin" >> $GITHUB_PATH
           echo "PKG_CONFIG_PATH=$HOME/efficios_dep/lib/pkgconfig:$PKG_CONFIG_PATH" >> $GITHUB_ENV
